# model_inversion_attack

./: .envrc  .gitignore  README.md  pyproject.toml
src/model_inversion_attack/: auth.py  enroll.py  main.py  mi_attack.py  model.py  reconstruct.py  server.py
src/webapp/: dashboard.html  index.html
