[project]
name = "model-inversion-attack"
version = "0.1.0"
description = "Research toolkit for model inversion attacks using FaceNet and PyTorch"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "facenet-pytorch>=2.5.3",
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
model-inversion-attack = "model_inversion_attack.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_inversion_attack"]

[tool.uv]
package = true
